force-app/main/default/objects/Controlling_Post__c/Controlling_Post__c.object-meta.xml
<CustomObject>
    <label>Controlling Post</label>
    <nameField>
        <label>CPID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controlling Posts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>