force-app/main/default/objects/Controlling_Post__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the management district within the State group that the CPID record is related to</description>
    <label>Area Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>