force-app/main/default/objects/Controlling_Post__c/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>T_SET CPID Number</description>
    <externalId>true</externalId>
    <label>CPID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>