force-app/main/default/objects/Controlling_Post__c/fields/CPID_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CPID_Address_2__c</fullName>
    <complianceGroup>Privacy_Sensitive_Personal_Information;Integrity_Trusted;Source_CAP</complianceGroup>
    <description>This is the CPID Address 2</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Control Post Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>