force-app/main/default/objects/Controlling_Post__c/fields/CPID_Address__c.field-meta.xml
<CustomField>
    <fullName>CPID_Address__c</fullName>
    <complianceGroup>Privacy_Sensitive_Personal_Information;Integrity_Trusted;Source_CAP</complianceGroup>
    <description>This is the CPID Address</description>
    <formula>CPID_Address_1__c+&apos; &apos;+CPID_Address_2__c+&apos; &apos;+CPID_Address_3__c+&apos; &apos;+CPID_Address_4__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>