force-app/main/default/objects/Controlling_Post__c/fields/CPID_CancelFag__c.field-meta.xml
<CustomField>
    <fullName>CPID_CancelFag__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_CAP</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Control Post Cancel Flag</description>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>