force-app/main/default/objects/Controlling_Post__c/fields/CPID_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>CPID_Incumbent__c</fullName>
    <complianceGroup>Privacy_Sensitive_Personal_Information;Integrity_Trusted;Source_CAP</complianceGroup>
    <description>This is the CPID Type</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Incumbent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>