force-app/main/default/objects/Controlling_Post__c/fields/CPID_LanID__c.field-meta.xml
<CustomField>
    <fullName>CPID_LanID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>This store the LAN Id of the user record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPID Lan ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>