force-app/main/default/objects/Controlling_Post__c/fields/CPID_Phone__c.field-meta.xml
<CustomField>
    <fullName>CPID_Phone__c</fullName>
    <complianceGroup>Privacy_Sensitive_Personal_Information;Integrity_Trusted;Source_CAP</complianceGroup>
    <description>This is the Control Post Phone</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>