force-app/main/default/objects/Controlling_Post__c/fields/CPID_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CPID_Start_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>CPID Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>