force-app/main/default/objects/Controlling_Post__c/fields/CPID_Type__c.field-meta.xml
<CustomField>
    <fullName>CPID_Type__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_CAP</complianceGroup>
    <description>This is the CPID Type</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Control Post Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>