force-app/main/default/objects/Controlling_Post__c/fields/CPID_User__c.field-meta.xml
<CustomField>
    <fullName>CPID_User__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup to the user and will be populated automatically based on CPID Lan ID value.</description>
    <label>CPID User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Controlling_Posts1</relationshipName>
    <type>Lookup</type>
</CustomField>