force-app/main/default/objects/Controlling_Post__c/fields/District_CTA__c.field-meta.xml
<CustomField>
    <fullName>District_CTA__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_CAP</complianceGroup>
    <description>This is the Control Post CTA</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>