force-app/main/default/objects/Controlling_Post__c/fields/Geo_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the Australian Geographical State where the customers on the CPID are located

(eg. A CPID in QLD managed by a VIC based banker should be Geo State = QLD)</description>
    <label>Geo State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>