force-app/main/default/objects/Controlling_Post__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>CPID Specialty Area</description>
    <label>Industry Specialisation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>