force-app/main/default/objects/Controlling_Post__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This indicates which CPID record is the current record (where and what banker is responsible for the CPID).

This is because 1 CPID can have multiple State / District / Area alignments and responsible bankers over time.

Active = Y,N.

No other values allowed</description>
    <label>Active Code</label>
    <type>Checkbox</type>
</CustomField>