force-app/main/default/objects/Controlling_Post__c/fields/Last_CAP_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CAP_Load_Date__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_CAP</complianceGroup>
    <description>Last CAP load Date</description>
    <label>Last CAP load Date</label>
    <type>DateTime</type>
</CustomField>