force-app/main/default/objects/Controlling_Post__c/fields/Responsible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the banker that is responsible for that CPID.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Controlling_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>