force-app/main/default/objects/Controlling_Post__c/fields/Responsible_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee_Id__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the banker that is responsible for that CPID.

If this field = 0, then there currently isn&apos;t any responsible banker for this CPID, but it is still active with customers attached to it</description>
    <label>Responsible Employee Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>