force-app/main/default/objects/Controlling_Post__c/fields/Responsible_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Employee_Name__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the banker that is responsible for that CPID.</description>
    <formula>Responsible_Employee__r.FirstName &amp; &quot; &quot; &amp; Responsible_Employee__r.LastName</formula>
    <label>Responsible Employee Name</label>
    <type>Text</type>
</CustomField>