force-app/main/default/objects/Controlling_Post__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the Commercial Segment that the CPID record is related to</description>
    <label>Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>