force-app/main/default/objects/Controlling_Post__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the date when the CPID record started to be associated with the following combination of field values:

Segment
State
District/Region/Area
Team Code
Employee ID
Industry Specialization</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>