force-app/main/default/objects/Controlling_Post__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>This is the management state group within the Segment that the CPID record is related to

(Note: this is not always a geographical state)</description>
    <label>State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>