force-app/main/default/objects/Controlling_Post__c/fields/User_Segment__c.field-meta.xml
<CustomField>
    <fullName>User_Segment__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Accurate;Source_Salesforce</complianceGroup>
    <description>This will store the user&apos;s commercial segment.</description>
    <formula>TEXT(CPID_User__r.Commercial_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>